# reminder-bot

./: .env  pyproject.toml
bot/: main.py
bot/router/: reminder.py
